--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "mongodb": "^2.2.16",
     "mongoose": "^4.5.9"
   },
   "devDependencies": {
